--- a/backend/notes.html
+++ b/backend/notes.html
@@ -2,7 +2,7 @@
 <html>
 	<!-- 
 		1) Backend will recive request for data from frontend
-		2) Backend will request data from API
+		2) Backend will request data from API and/or Scraper
 		3) Backend will recive data from API
 		4) Backend will format data into correct structure for frontend
 		5) Backend will send formated data to fronted
@@ -21,4 +21,18 @@
 		send(formatedData){}
 	-->
 	
+	<!-- 
+		Backend To Do:
+
+		1) Function 1-3
+		2) Implement API Connection
+		3) Implement Scrapers
+	-->
+
+	<!-- 
+		Backend Questions:
+
+		1) Are we and can we do live updateing?
+	-->
+
 </html>
